Allow slow USB devices to be given more time to return their USB descriptors, like Logitech HD Pro Webcam C920.

PR:		248926
MFC after:	1 week
Sponsored by:	Mellanox Technologies